--- a/css/styles.css
+++ b/css/styles.css
@@ -19,9 +19,11 @@ body{
   bottom:0;
   right:0;
   left:0;
+  z-index: 1;
 }
 
 #modal{
+  z-index: 2;
   background: #fff;
   width: 300px;
   padding: 20px;
@@ -31,8 +33,17 @@ body{
   left: 0;
   right: 0;
   margin: 0 auto;
+  transition: transform 0.4s;
 }
 
 #modal > p {
   margin: 0 0 20px;
+}
+
+#mask.hidden {
+  display: none;
+}
+
+#modal.hidden {
+  transform: translate(0, -500px);
 }
